--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link link-body-emphasis px-2">
+                <a href="#" class="nav-link link-body-emphasis px-2" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">
                   <img src="../dist/images/icon-shopping-bag.svg" alt="Shop">             
                 </a>
               </li>
@@ -147,13 +147,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../dist/images/slide1.jpg" class="d-block w-100" alt="...">
+          <a href="javascript:void(0);"><img src="../dist/images/slide1.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
-          <img src="../dist/images/slide1.jpg" class="d-block w-100" alt="...">
+          <a href="javascript:void(0);"><img src="../dist/images/slide1.jpg" class="d-block w-100" alt="..."></a>
         </div>
         <div class="carousel-item">
-          <img src="../dist/images/slide1.jpg" class="d-block w-100" alt="...">
+          <a href="javascript:void(0);"><img src="../dist/images/slide1.jpg" class="d-block w-100" alt="..."></a>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -235,7 +235,7 @@
     <div class="container">
       <div class="trending mx-auto py-5">
         <h2 class="trending__title text-center my-3 fw-bold">Now Trending</h2>
-        <p class="trending__desc text-center mt-3 mb-5">See what everyone’s wearing right now</p>
+        <p class="trending__desc text-center mt-3 mb-3">See what everyone’s wearing right now</p>
         <div class="row text-center">
           <div class="col-md-3 col-sm-4 p-3">
             <div class="trending__box">
@@ -317,11 +317,112 @@
               </a>
             </div>
           </div>
-          
+        </div>
+        <!-- button pills -->
+        <div class="d-flex justify-content-between trending__pills mt-3 mb-4 flex-wrap gap-2">
+          <button type="button" class="btn btn-outline-dark rounded-pill">#Thanksgiving</button>
+          <button type="button" class="btn btn-outline-dark rounded-pill">#NewYears</button>
+          <button type="button" class="btn btn-outline-dark rounded-pill">#Knitted</button>
+          <button type="button" class="btn btn-outline-dark rounded-pill">#Pajamas</button>
+          <button type="button" class="btn btn-outline-dark rounded-pill">#WFH</button>
+          <button type="button" class="btn btn-outline-dark rounded-pill">#FallFashion</button>
         </div>
       </div>
     </div>
-
+    <!-- banner2 -->
+    <a href="javascript:void(0);" class="banner2">
+      <img class="img-fluid fullwidth" src="../dist/images/banner-2.jpg">
+    </a>
+    <!-- recently bought -->
+    <div class="container recently-bought py-5">
+      <h2 class="recently-bought__title fw-bold mb-3 text-center">Recently Bought</h2>
+      <div class="row">
+        <div class="col">
+          <div class="recently-bought__box p-3">
+            <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
+            <div class="recently-bought__box__title mt-2 mb-2">
+              Festive Looks Rust Red Ribbed Velvet Long Sleeve Bodysuit
+            </div>
+            <div class="recently-bought__box__price d-flex justify-content-start mt-2 mb-3 fw-semibold">
+              <span>$38</span>
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="recently-bought__box p-3">
+            <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
+            <div class="recently-bought__box__title mt-2 mb-2">
+              Chevron Flap Crossbody Bag
+            </div>
+            <div class="recently-bought__box__price d-flex justify-content-start gap-5 mt-2 mb-3 fw-semibold">
+              <span class="text-danger fw-bold">$5.77</span>
+              <span class="text-decoration-line-through">$7.34</span>
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="recently-bought__box p-3">
+            <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
+            <div class="recently-bought__box__title mt-2 mb-2">
+              Manilla Tan Multi Plaid Oversized Fringe Scarf
+            </div>
+            <div class="recently-bought__box__price d-flex justify-content-start gap-5 mt-2 mb-3 fw-semibold">
+              <span class="text-danger fw-bold">$29</span>
+              <span class="text-decoration-line-through">$39</span>
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="recently-bought__box p-3">
+            <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
+            <div class="recently-bought__box__title mt-2 mb-2">
+              Diamante Puff Sleeve Dress - Black
+            </div>
+            <div class="recently-bought__box__price d-flex justify-content-start mt-2 mb-3 fw-semibold">
+              <span>$38</span>
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="recently-bought__box p-3">
+            <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
+            <div class="recently-bought__box__title mt-2 mb-2">
+              Banneth Open Front Formal Dress in Black
+            </div>
+            <div class="recently-bought__box__price d-flex justify-content-start gap-5 mt-2 mb-3 fw-semibold">
+              <span class="text-danger fw-bold">$69</span>
+              <span class="text-decoration-line-through">$99.95</span>
+            </div>
+            <div class="d-grid">
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- shopping cart -->
+    <!-- <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Toggle right offcanvas</button> -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart" aria-labelledby="offcanvasCartLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasCartLabel">Cart</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        No items yet
+      </div>
+    </div>
 
   </div>
 
