--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link href="../dist/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
   </head>
   <body>
@@ -347,7 +348,7 @@
               <span>$38</span>
             </div>
             <div class="d-grid">
-              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart" data-product-id="1">Buy</button>
             </div>
           </div>
         </div>
@@ -362,7 +363,7 @@
               <span class="text-decoration-line-through">$7.34</span>
             </div>
             <div class="d-grid">
-              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart" data-product-id="2">Buy</button>
             </div>
           </div>
         </div>
@@ -377,21 +378,21 @@
               <span class="text-decoration-line-through">$39</span>
             </div>
             <div class="d-grid">
-              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart" data-product-id="3">Buy</button>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="recently-bought__box p-3">
             <img class="recently-bought__box__img text-center " src="../dist/images/recently-bought-1.jpg">
-            <div class="recently-bought__box__title mt-2 mb-2">
+            <div class="recently-bought__box__title mt-2 mb-3">
               Diamante Puff Sleeve Dress - Black
             </div>
             <div class="recently-bought__box__price d-flex justify-content-start mt-2 mb-3 fw-semibold">
               <span>$38</span>
             </div>
             <div class="d-grid">
-              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart" data-product-id="4">Buy</button>
             </div>
           </div>
         </div>
@@ -406,7 +407,7 @@
               <span class="text-decoration-line-through">$99.95</span>
             </div>
             <div class="d-grid">
-              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">Buy</button>
+              <button type="button" class="btn btn-outline-dark recently-bought__box__buy rounded-0 text-center" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart" data-product-id="5">Buy</button>
             </div>
           </div>
         </div>
@@ -435,5 +436,76 @@
   </p>
 </footer>
 
-    </body>
+  <script>
+
+    var productArray1 = [
+      {
+        id: 1,
+        title: "Festive Looks Rust Red Ribbed Velvet Long Sleeve Bodysuit",
+        price: 38
+      },
+      {
+        id: 2,
+        title: "Chevron Flap Crossbody Bag",
+        price: 5.77
+      },
+      {
+        id: 3,
+        title: "Manilla Tan Multi Plaid Oversized Fringe Scarf",
+        price: 29
+      },
+      {
+        id: 4,
+        title: "Diamante Puff Sleeve Dress - Black",
+        price: 45.99
+      },
+      {
+        id: 5,
+        title: "Banneth Open Front Formal Dress in Black",
+        price: 69
+      }
+    ]
+    var cartArray = [];
+    addToCart = (productId) => {
+      if (cartArray.includes(productId)) {
+        alert('Already added');
+      } else {
+        cartArray.push(productId);
+        // console.log(cartArray.length);
+      }
+      console.log(cartArray);
+      displayCartItems();
+    }
+    
+    displayCartItems = () => {
+      if (cartArray.length > 0) {
+        var cartItemsHtml = '<div id="cart-items-container"></div>';
+        $('.offcanvas-body').html(cartItemsHtml);
+        for (var i = 0; i < cartArray.length; i++) {
+          var productId = cartArray[i];
+        }
+        var foundProduct = null;
+        for (var i = 0; i < productArray1.length; i++) {
+          // console.log(productArray1[i]);
+          if (productArray1[i].id == productId) {
+            foundProduct = productArray1[i];
+            break;
+          }
+        }
+        if (foundProduct) {
+          var cartItem = '<p><strong>Title:</strong> ' + foundProduct.title + '<br><strong>Price:</strong> $' + foundProduct.price.toFixed(2) + '</p>';
+          $('.offcanvas-body #cart-items-container').append(cartItem);
+        }
+      } else {
+        $('.offcanvas-body').html('<p>No items added.</p>');
+      }
+    }
+    $('.recently-bought__box__buy').on('click', function() {
+      let productId = $(this).attr('data-product-id');
+      addToCart(productId);
+    });
+
+  </script>
+
+  </body>
 </html>
